syntax = "proto3";
package comdex.asset.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message Pool {
  uint64 id                = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
  string denom_in          = 2 [ (gogoproto.moretags) = "yaml:\"denom_in\"" ];
  string denom_out         = 3 [ (gogoproto.moretags) = "yaml:\"denom_out\"" ];
  string liquidation_ratio = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"liquidation_ratio\""
  ];
}
